deployment/blink-server/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: blink-server
