deployment/blink-server/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
spec:
  tls:
    - secretName: blink-server-tls
      hosts:
        - blink.squishmeist.com
  rules:
    - host: blink.squishmeist.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 80
